--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sign up or Sign in</title>
     <link rel="stylesheet" href="style.css" />
+    <!-- FAVICON -->
+    <link rel="icon" type="images/png" href="images/icons8-favicon-48.png" />
   </head>
   <body>
     <main>
