Added minlength and max length

--- a/index.html
+++ b/index.html
@@ -13,8 +13,18 @@
       <div class="input-section">
         <div class="sub-container">
           <h1>Sign in</h1>
-          <input type="text" placeholder="Username" />
-          <input type="password" placeholder="Password" />
+          <input
+            type="text"
+            minlength="5"
+            maxlength="16"
+            placeholder="Username"
+          />
+          <input
+            type="password"
+            minlength="7"
+            maxlength="16"
+            placeholder="Password"
+          />
           <button>Login</button>
         </div>
       </div>
